--- a/MAILab/MAILab.csproj
+++ b/MAILab/MAILab.csproj
@@ -53,7 +53,6 @@
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
-    <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Data" />
     <Reference Include="System.Deployment" />
     <Reference Include="System.Drawing" />
@@ -67,13 +66,13 @@
     <Compile Include="ATSSubscribersForm.Designer.cs">
       <DependentUpon>ATSSubscribersForm.cs</DependentUpon>
     </Compile>
-    <Compile Include="DataBase.cs" />
     <Compile Include="Facilities.cs" />
     <Compile Include="MaritalStatus.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Request.cs" />
     <Compile Include="Subscriber.cs" />
+    <Compile Include="DataBase.cs" />
     <EmbeddedResource Include="ATSSubscribersForm.resx">
       <DependentUpon>ATSSubscribersForm.cs</DependentUpon>
     </EmbeddedResource>
@@ -101,9 +100,9 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="Requests.xml">
+    <None Include="Requests.xml">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </EmbeddedResource>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <BootstrapperPackage Include="Microsoft.Net.Client.3.5">
@@ -116,6 +115,11 @@
       <ProductName>.NET Framework 3.5 SP1</ProductName>
       <Install>true</Install>
     </BootstrapperPackage>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="DataBase.xml">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
