--- a/MAILab/MAILab.csproj
+++ b/MAILab/MAILab.csproj
@@ -70,7 +70,7 @@
     <Compile Include="MaritalStatus.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Request.cs" />
+    <Compile Include="Filters.cs" />
     <Compile Include="Subscriber.cs" />
     <Compile Include="DataBase.cs" />
     <EmbeddedResource Include="ATSSubscribersForm.resx">
@@ -97,10 +97,7 @@
     </Compile>
   </ItemGroup>
   <ItemGroup>
-    <None Include="App.config" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Requests.xml">
+    <None Include="Filters.xml">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
   </ItemGroup>
